--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                 <!-- Email Section -->
                 <div class="flex items-center space-x-2" id="contact">
                     <i data-feather="mail" class="text-gray-500"></i>
-                    <a href="mailto:info@example.com" class="text-gray-700 hover:text-gray-900 transition ease-in-out duration-300">+81-80-2489-7773</a>
+                    <a href="mailto:info@example.com" class="text-gray-700 hover:text-gray-900 transition ease-in-out duration-300">francesco.demauri@gmail.com</a>
                 </div>
                 <!-- Phone Number Section -->
                 <div class="flex items-center space-x-2">
