--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <div class="container max-w-screen-xl mx-auto px-4">
 
                 <nav class="flex items-center justify-between mb-40">
-                    <img src="assets/image/tokidoki_logo_2.jpg" alt="Logo" style="height: 80px; width: 80px; border-radius: 100%;">
+                    <img src="assets/image/logowini4u.png" alt="Logo" style="height: 120px; width: 140px; border-radius: 100%;">
 
                     <button class="px-7 py-3 md:px-9 md:py-4 bg-white font-medium md:font-semibold text-gray-700 text-md rounded-md hover:bg-gray-700 hover:text-white transition ease-linear duration-500"><a
               href="Presentazione Personale.pdf" target="_blank">Brochure</a></button>
