--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>wine4u</title>
+         <link rel="icon" type="image/x-icon" href="assets/image/logowini4u.png">
         <link rel="stylesheet" href="assets/css/tailwind.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -141,7 +142,7 @@
 <footer class="py-10 md:py-16 mb-20 md:mb-40 lg:mb-52">
     <div class="container max-w-screen-xl mx-auto px-4">
         <div class="text-center">
-            <h1 class="font-medium text-gray-700 text-4xl md:text-5xl mb-5">Contatto</h1>
+            <h1 class="font-medium text-gray-700 text-4xl md:text-5xl mb-5">Contact</h1>
             <div class="flex flex-wrap justify-center items-center space-x-8 mb-8">
                 <!-- Email Section -->
                 <div class="flex items-center space-x-2" id="contact">
