--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
                                 a historic and leading company in the import and sale of Italian eno-gastronomic products.<br>
                                 During my four years with the company, I expanded my skills as a salesperson,<br>
                                 focusing initially on the Ho.Re.Ca. channel and later on large-scale retail.<br>
-                                My ability to communicate fluently in Japanese<br>
-                                enabled me to collaborate directly with prominent Italian producers such as:<br>
+                                My ability to communicate fluently in Japanese
+                                enabled me to collaborate<br> directly with prominent Italian producers such as:<br>
                                 Ferrari, Planeta, Masi, Frescobaldi, Livio Felluga, Badia a Coltibuono, Borgogno, etc.,<br>
                                 fully understanding the dynamics of sales, import-export, and the needs of producers from the Italian side.
                                 </p>
