--- a/index.html
+++ b/index.html
@@ -149,17 +149,17 @@
         <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-2 gap-8">
             <a href="https://www.tenuterubino.com/" target="_blank" class="flex items-center space-x-2 font-normal text-gray-500 text-sm md:text-base"><img src="assets/image/tenute-rubino-logo.webp" alt="Tenute Rubino" class="h-20 w-20 object-cover" /><span>[Puglia] Export Area Manager Asia-Pacific [2015]</span></a>
 
-            <a href="https://www.gorghitondi.it/" target="_blank" class="flex items-center space-x-2 font-normal text-gray-500 text-sm md:text-base"><img src="assets/image/tenuta-gorghi-tondi.png" alt="Gorghi Tondi" class="h-20 w-20 object-cover" /><span>[Sicilia] Consulenza Mercati Asia-Pacific,Direttamente Responsabile per il mercato Giapponese. [2021]</span></a>
+            <a href="https://www.gorghitondi.it/" target="_blank" class="flex items-center space-x-2 font-normal text-gray-500 text-sm md:text-base"><img src="assets/image/tenuta-gorghi-tondi.png" alt="Gorghi Tondi" class="h-20 w-20 object-cover" /><span>[Sicily] Asia-Pacific Market Consulting, Directly Responsible for the Japanese Market. [2021]</span></a>
 
-            <a href="https://www.argiolas.it/" target="_blank" class="flex items-center space-x-2 font-normal text-gray-500 text-sm md:text-base"><img src="assets/image/argiolas.png" alt="Argiolas" class="h-20 w-20 object-cover" /><span>[Sardegna] Export Area Manager & Brand Ambassador Giappone [2022]</span></a>
+            <a href="https://www.argiolas.it/" target="_blank" class="flex items-center space-x-2 font-normal text-gray-500 text-sm md:text-base"><img src="assets/image/argiolas.png" alt="Argiolas" class="h-20 w-20 object-cover" /><span>[Sardegna] Export Area Manager & Brand Ambassador for Japan [2022]</span></a>
 
-            <a href="https://italikodrink.com/" target="_blank" class="flex items-center space-x-2 font-normal text-gray-500 text-sm md:text-base"><img src="assets/image/italiko.jpg" alt="Italiko" class="h-20 w-20 object-cover" /><span>Consulenza e Apertura mercati Asiatici [2023]</span></a>
+            <a href="https://italikodrink.com/" target="_blank" class="flex items-center space-x-2 font-normal text-gray-500 text-sm md:text-base"><img src="assets/image/italiko.jpg" alt="Italiko" class="h-20 w-20 object-cover" /><span>Consulting and Market Entry in Asian Markets [2023]</span></a>
 
-            <a href="https://www.peqagri.it/" target="_blank" class="flex items-center space-x-2 font-normal text-gray-500 text-sm md:text-base"><img src="assets/image/peq-agri.jpeg" alt="Peq-Agri" class="h-20 w-20 object-cover" /><span>[Liguria] Consulenza Apertura mercati Asiatici [2023]</span></a>
+            <a href="https://www.peqagri.it/" target="_blank" class="flex items-center space-x-2 font-normal text-gray-500 text-sm md:text-base"><img src="assets/image/peq-agri.jpeg" alt="Peq-Agri" class="h-20 w-20 object-cover" /><span>[Liguria] Consulting for Opening Asian Markets [2023]</span></a>
 
             <a href="https://oskiros.it/" target="_blank" class="flex items-center space-x-2 font-normal text-gray-500 text-sm md:text-base"><img src="assets/image/oskiros.png" alt="Oskiros" class="h-20 w-20 object-cover" /><span>[Sardegna] Export Area Manager Asia-Pacific [2023]</span></a>
             
-            <a href="https://www.tolaini.it/" target="_blank" class="flex items-center space-x-2 font-normal text-gray-500 text-sm md:text-base"><img src="assets/image/Tolaini.webp" alt="Tolaini" class="h-20 w-20 object-cover" /><span>[Toscana] Brand Ambassador - Reginal Sales Manager</span></a>
+            <a href="https://www.tolaini.it/" target="_blank" class="flex items-center space-x-2 font-normal text-gray-500 text-sm md:text-base"><img src="assets/image/Tolaini.webp" alt="Tolaini" class="h-20 w-20 object-cover" /><span>[Toscana] Brand Ambassador - Regional Sales Manager</span></a>
         </div>
     </div>
 </section>
