--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <img src="assets/image/logowini4u.png" alt="Logo" style="height: 120px; width: 140px; border-radius: 100%;">
 
                     <button class="px-7 py-3 md:px-9 md:py-4 font-medium md:font-semibold bg-gray-700 text-gray-50 text-sm rounded-md hover:bg-gray-50 hover:text-gray-700 transition ease-linear duration-500"><a
-              href="Presentazione Personale.pdf" target="_blank">Brochure</a></button>
+              href="/" target="_blank">Brochure</a></button>
                 </nav>
 
                 <div class="text-center">
@@ -55,12 +55,12 @@
                         <h1 class="font-medium text-gray-700 text-3xl md:text-4xl mb-5">Who We Are</h1>
                     </div>
 
-                    <div class="space-y-24">
+                    <div class="space-y-12">
                         <div class="flex space-x-6">
                          <span class="w-10 h-0.5 bg-gray-300 mt-5"></span>
 
                             <div>
-                                <p class="font-normal text-gray-500 text-sm md:text-base"><p>Born in 1985 in Cagliari, after a brief experience in London, <br> I have spent the last 18 years in Japan, where I have established <br> a respectable career in business consulting specific to the wine industry.</p>
+                                <p class="font-normal text-gray-500 text-sm md:text-base">Born in 1985 in Cagliari, after a brief experience in London, <br> I have spent the last 18 years in Japan, where I have established <br> a respectable career in business consulting specific to the wine industry.</p>
 
                             </div>
                         </div>
@@ -143,26 +143,40 @@
 
 <section class="py-10 md:py-16">
     <div class="container max-w-screen-xl mx-auto px-4">
-            <h1 class="font-medium text-gray-700 text-3xl md:text-4xl mb-5">With Whom We Work</h1>
-            <p class="font-normal text-gray-500 text-sm md:text-base mb-10 md:mb-20">Currently, we have the privilege of collaborating with the following Wineries, serving in these roles:</p>
+        <!-- Heading and Intro -->
+        <h1 class="font-medium text-gray-700 text-3xl md:text-4xl mb-5">With Whom We Work</h1>
+        <p class="font-normal text-gray-500 text-sm md:text-base mb-10 md:mb-20">
+            Currently, we have the privilege of collaborating with the following Wineries, serving in these roles:
+        </p>
 
-        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-2 gap-8">
-            <a href="https://www.tenuterubino.com/" target="_blank" class="flex items-center space-x-2 font-normal text-gray-500 text-sm md:text-base"><img src="assets/image/tenute-rubino-logo.webp" alt="Tenute Rubino" class="h-20 w-20 object-cover" /><span>[Puglia] Export Area Manager Asia-Pacific [2015]</span></a>
+        <!-- Two-Column List -->
+        <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
+            <!-- Wineries Column -->
+            <div>
+                <h2 class="font-medium text-gray-700 text-lg md:text-xl mb-4">Wineries:</h2>
+                <ul class="list-disc list-inside space-y-2 text-gray-500 text-sm md:text-base">
+                    <li>[Sardegna] Argiolas - Export Area Manager Japan</li>
+                    <li>[Toscana] Tolaini - Export Area Manager Asia-Pacific</li>
+                    <li>[Toscana] Argentiera - Export Area Manager Asia-Pacific</li>
+                    <li>[Sicilia] Gorghi Tondi - Asia-Pacific Area Consultant, Japan Brand Manager</li>
+                    <li>[Veneto] De Stefani - Japan Brand Ambassador</li>
+                    <li>[Lombardia] Conte Vistarino - Asia-Pacific Area Consultant</li>
+                </ul>
+            </div>
 
-            <a href="https://www.gorghitondi.it/" target="_blank" class="flex items-center space-x-2 font-normal text-gray-500 text-sm md:text-base"><img src="assets/image/tenuta-gorghi-tondi.png" alt="Gorghi Tondi" class="h-20 w-20 object-cover" /><span>[Sicily] Asia-Pacific Market Consulting, Directly Responsible for the Japanese Market. [2021]</span></a>
-
-            <a href="https://www.argiolas.it/" target="_blank" class="flex items-center space-x-2 font-normal text-gray-500 text-sm md:text-base"><img src="assets/image/argiolas.png" alt="Argiolas" class="h-20 w-20 object-cover" /><span>[Sardegna] Export Area Manager & Brand Ambassador for Japan [2022]</span></a>
-
-            <a href="https://italikodrink.com/" target="_blank" class="flex items-center space-x-2 font-normal text-gray-500 text-sm md:text-base"><img src="assets/image/italiko.jpg" alt="Italiko" class="h-20 w-20 object-cover" /><span>Consulting and Market Entry in Asian Markets [2023]</span></a>
-
-            <a href="https://www.peqagri.it/" target="_blank" class="flex items-center space-x-2 font-normal text-gray-500 text-sm md:text-base"><img src="assets/image/peq-agri.jpeg" alt="Peq-Agri" class="h-20 w-20 object-cover" /><span>[Liguria] Consulting for Opening Asian Markets [2023]</span></a>
-
-            <a href="https://oskiros.it/" target="_blank" class="flex items-center space-x-2 font-normal text-gray-500 text-sm md:text-base"><img src="assets/image/oskiros.png" alt="Oskiros" class="h-20 w-20 object-cover" /><span>[Sardegna] Export Area Manager Asia-Pacific [2023]</span></a>
-            
-            <a href="https://www.tolaini.it/" target="_blank" class="flex items-center space-x-2 font-normal text-gray-500 text-sm md:text-base"><img src="assets/image/Tolaini.webp" alt="Tolaini" class="h-20 w-20 object-cover" /><span>[Toscana] Brand Ambassador - Regional Sales Manager</span></a>
+            <!-- Agencies Column -->
+            <div>
+                <h2 class="font-medium text-gray-700 text-lg md:text-xl mb-4">Agencies:</h2>
+                <ul class="list-disc list-inside space-y-2 text-gray-500 text-sm md:text-base">
+                    <li>[Italy] Unit Srl - Japanese Market</li>
+                    <li>[Italy/Thailand] Ithai Trade Srl - Japanese Market</li>
+                    <li>[Spain] Fanvino - Asian Market</li>
+                </ul>
+            </div>
         </div>
     </div>
 </section>
+
 
 
 
@@ -177,10 +191,10 @@
                     <a href="mailto:info@example.com" class="text-gray-700 hover:text-gray-900 transition ease-in-out duration-300">francesco@wine4u.info</a>
                 </div>
                 <!-- Phone Number Section -->
-                <div class="flex items-center space-x-2">
+                <!-- <div class="flex items-center space-x-2">
                     <i data-feather="phone" class="text-gray-500"></i>
                     <span class="text-gray-700">+81-80-2489-7773</span>
-                </div>
+                </div> -->
             </div>
             <div class="flex items-center justify-center space-x-8">
                 <!-- Social Media Icons -->
