new additions + bilingual

--- a/ja/index.html
+++ b/ja/index.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ja">
 <head>
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Wine4U — Import & Export Consulting | Francesco De Mauri</title>
+
   <meta name="description" content="Wine4U helps wineries and importers connect Italy and Japan. Export & import consulting by Francesco De Mauri: market entry, brand management, and distribution." />
-  <link rel="icon" href="assets/image/logowini4u.png" />
+  <link rel="icon" href="/assets/image/logowini4u.png" />
+
+  <!-- Canonical & hreflang -->
+  <link rel="canonical" href="https://www.wine4u.info/ja/" />
   <link rel="alternate" hreflang="en" href="https://www.wine4u.info/" />
   <link rel="alternate" hreflang="ja" href="https://www.wine4u.info/ja/" />
   <link rel="alternate" hreflang="x-default" href="https://www.wine4u.info/" />
-
-
-  <!-- Canonical -->
-  <link rel="canonical" href="https://www.wine4u.info/" />
 
   <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -21,21 +21,17 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800&display=swap" rel="stylesheet" />
 
   <!-- CSS -->
-  <link rel="stylesheet" href="assets/css/tailwind.css" />
+  <link rel="stylesheet" href="/assets/css/tailwind.css" />
 
-  <!-- Open Graph / Twitter -->
+  <!-- OG/Twitter -->
   <meta property="og:type" content="website" />
   <meta property="og:title" content="Wine4U — Import & Export Consulting" />
   <meta property="og:description" content="Bringing the world to your glass. Consulting for wineries and importers across Italy and Japan." />
   <meta property="og:image" content="https://www.wine4u.info/assets/image/F3.jpg" />
-  <meta property="og:url" content="https://www.wine4u.info/" />
+  <meta property="og:url" content="https://www.wine4u.info/ja/" />
   <meta name="twitter:card" content="summary_large_image" />
 
-  <!-- Icons -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/feather-icons/4.28.0/feather.min.js" integrity="sha512-7x3zila4t2qNycrtZ31HO0NnJr8kg2VI67YLoRSyi9hGhRN66FHYWr7Axa9Y1J9tGYHVBPqIjSE1ogHrJTz51g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-
-  <!-- Prefetch brochure (optional) -->
-  <!-- <link rel="preload" as="document" href="/brochure.pdf"> -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/feather-icons/4.28.0/feather.min.js" crossorigin="anonymous"></script>
 </head>
 <body class="bg-slate-50 text-slate-800 antialiased [font-family:Poppins,sans-serif]">
   <a href="#main" class="sr-only focus:not-sr-only focus:fixed focus:top-4 focus:left-4 focus:z-50 focus:bg-white focus:text-slate-900 focus:px-4 focus:py-2 focus:rounded-lg shadow">Skip to content</a>
@@ -43,8 +39,8 @@
   <header class="py-6 md:py-8">
     <div class="container max-w-screen-xl mx-auto px-4">
       <nav class="flex items-center justify-between">
-        <a href="/" class="inline-flex items-center gap-3">
-          <img src="assets/image/logowini4u.png" alt="Wine4U logo" class="h-16 w-16 rounded-full object-cover" loading="eager" fetchpriority="high" />
+        <a href="/ja/" class="inline-flex items-center gap-3">
+          <img src="/assets/image/logowini4u.png" alt="Wine4U logo" class="h-16 w-16 rounded-full object-cover" loading="eager" fetchpriority="high" />
           <span class="sr-only">Wine4U</span>
         </a>
 
@@ -53,8 +49,8 @@
           <a href="#what" class="px-4 py-2 text-sm font-medium hover:underline">What we do</a>
           <a href="#partners" class="px-4 py-2 text-sm font-medium hover:underline">Partners</a>
           <a href="#contact" class="px-4 py-2 text-sm font-medium hover:underline">Contact</a>
-          <a href="/Presentazione Personale.pdf" target="_blank" rel="noopener" class="px-7 py-3 md:px-9 md:py-4 font-medium md:font-semibold bg-gray-700 text-gray-50 text-sm rounded-md hover:bg-gray-50 hover:text-gray-700 transition ease-linear duration-500">Brochure</a>
-          <a href="/ja/" class="px-3 py-2 text-sm font-medium border rounded-md hover:bg-slate-100" hreflang="ja">日本語</a>
+          <a href="/Presentazione Personale.pdf" target="_blank" rel="noopener" class="px-7 py-3 md:px-9 md:py-4 font-medium md:font-semibold bg-gray-700 text-gray-50 text-sm rounded-md hover:bg-gray-50 hover:text-gray-700 transition ease-linear duration-500"> ブローシャー</a>
+          <a href="/index.html" class="px-3 py-2 text-sm font-medium border rounded-md hover:bg-slate-100" hreflang="ja">English</a>
 
         </div>
       </nav>
@@ -67,13 +63,7 @@
       <div class="container max-w-screen-xl mx-auto px-4">
         <div class="text-center">
           <div class="flex justify-center mb-10 md:mb-12">
-            <img
-              src="assets/image/F3.jpg"
-              alt="Francesco De Mauri"
-              class="rounded-full object-cover w-40 h-40 md:w-56 md:h-56 shadow"
-              loading="eager"
-              fetchpriority="high"
-            />
+            <img src="/assets/image/F3.jpg" alt="Francesco De Mauri" class="rounded-full object-cover w-40 h-40 md:w-56 md:h-56 shadow" loading="eager" fetchpriority="high" />
           </div>
 
           <h1 class="font-extrabold text-slate-900 text-3xl md:text-5xl tracking-tight mb-4 uppercase">Francesco De Mauri</h1>
@@ -121,7 +111,6 @@
                 </p>
             </div>
             </div>
-
         </div>
       </div>
     </section>
@@ -218,16 +207,17 @@
     </div>
   </footer>
 
-  <!-- JSON-LD Organization (basic; add address/links if you have them) -->
+  <!-- JSON-LD (ja) -->
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
     "@type": "Organization",
     "name": "Wine4U",
-    "url": "https://www.wine4u.info/",
+    "url": "https://www.wine4u.info/ja/",
     "logo": "https://www.wine4u.info/assets/image/logowini4u.png",
     "email": "mailto:francesco@wine4u.info",
-    "description": "Export & import consulting for wineries and importers across Italy and Japan."
+    "description": "Export & import consulting for wineries and importers across Italy and Japan.",
+    "inLanguage": "en"
   }
   </script>
 
